# radio-sucrose

./: .gitignore  PLAN.md  README.md  app.py  pyproject.toml
src/radio_sucrose/: __init__.py  app.py  config.py  emoji.py  models.py  prompt.py  text.py  validation.py
src/radio_sucrose/clients/: dry_run.py  obs.py  tts.py  vllm.py
src/radio_sucrose/news/: yahoo.py
src/radio_sucrose/runtime/: director.py  loop.py  playback.py
src/radio_sucrose/storage/: sqlite.py
tests/: test_integration_external.py  test_obs_client.py  test_prompt_validation.py  test_root_app.py  test_storage_director_playback.py  test_tts_client.py  test_vllm_parsing.py  test_yahoo_http.py  test_yahoo_news.py
tests/fixtures/: yahoo_article.html  yahoo_pickup.html  yahoo_rss.xml
